--- a/dashlord.yml
+++ b/dashlord.yml
@@ -14,7 +14,15 @@ tools:
   codescan: true
   stats: true
 urls:
-  - url: https://www.fabrique.social.gouv.fr
+  - url: https://www.cadremploi.fr
     repositories:
-      - socialgouv/www
-  - url: https://beta.gouv.fr
+      - emploi/www
+  - url: https://www.keljob.com
+    repositories:
+      - emploi/www
+  - url: https://emploi.lefigaro.fr
+    repositories:
+      - emploi/www
+  - url: https://www.chooseyourboss.com
+    repositories:
+      - emploi/www
